#10876 편집화면 구현 - 공통 레이아웃 정리

--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -17,6 +17,8 @@ $layout-main-header-bg-color:                 $neutral50;
 
 // Content
 $layout-content-bg-color:                     $neutral50;
+// Page Content
+$layout-page-content-bg-color:                $white;
 
 // Aside
 $layout-aside-bg-color:                       $white;
