--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/itsm/pageType/searchCommonLayout}">
+      layout:decorate="~{layout/itsm/pageType/commonSearchLayout}">
 <head>
     <title th:text="#{dashboard.label.dashboard}"></title>
 </head>
@@ -11,51 +11,49 @@
     <h6 class="description ml-2" th:text="#{dashboard.msg.viewDescription}"></h6>
 </div>
 <div layout:fragment="pageSearchResult">
-    <div class="z-dashboard-content flex-fill">
-        <h3 class="sub-title">업무통계</h3>
-        <div id="statistic" class="flex-row">
-            <div class="statistic-box flex-row align-items-center mr-4">
-                <img class="z-img i-dashboard-document" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_document.png(theme=${#authentication.details.theme})}">
-                <div class="statistic-info">
-                    <h3 class="statistic-count flex-row">1</h3>
-                    <span class="statistic-type">처리할 문서</span>
-                </div>
-            </div>
-            <div class="statistic-box flex-row align-items-center mr-4">
-                <img class="z-img i-dashboard-daily" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_daily.png(theme=${#authentication.details.theme})}">
-                <div class="statistic-info">
-                    <h3 class="statistic-count flex-row">0(3)</h3>
-                    <span class="statistic-type">오늘</span>
-                </div>
-            </div>
-            <div class="statistic-box flex-row align-items-center mr-4">
-                <img class="z-img i-dashboard-weekly" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_weekly.png(theme=${#authentication.details.theme})}">
-                <div class="statistic-info">
-                    <h3 class="statistic-count flex-row">4(5)</h3>
-                    <span class="statistic-type">이번 주</span>
-                </div>
-            </div>
-            <div class="statistic-box flex-row align-items-center">
-                <img class="z-img i-dashboard-monthly" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_monthly.png(theme=${#authentication.details.theme})}">
-                <div class="statistic-info">
-                    <h3 class="statistic-count flex-row">11(12)</h3>
-                    <span class="statistic-type">이번 달</span>
-                </div>
+    <h3 class="sub-title">업무통계</h3>
+    <div id="statistic" class="flex-row">
+        <div class="statistic-box flex-row align-items-center mr-4">
+            <img class="z-img i-dashboard-document" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_document.png(theme=${#authentication.details.theme})}">
+            <div class="statistic-info">
+                <h3 class="statistic-count flex-row">1</h3>
+                <span class="statistic-type">처리할 문서</span>
             </div>
         </div>
-        <form id="frmSearch">
-            <input type="hidden" id="searchTokenType" name="searchTokenType" value="token.type.todo" />
-            <input type="hidden" id="searchDocumentId" name="searchDocumentId" value="" />
-            <input type="hidden" id="searchValue" name="searchValue" value="" />
-            <input type="hidden" id="searchFromDt" name="searchFromDt" class="search-date" />
-            <input type="hidden" id="toDt" name="toDt" class="search-date" />
-            <input type="hidden" id="searchToDt" name="searchToDt" class="search-date" />
-            <input type="hidden" id="searchTags" name="searchTags" value="" />
-        </form>
-        <h3 class="sub-title">처리할 문서</h3>
-        <div class="scroll-wrap">
-            <div id="tokenList"></div>
+        <div class="statistic-box flex-row align-items-center mr-4">
+            <img class="z-img i-dashboard-daily" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_daily.png(theme=${#authentication.details.theme})}">
+            <div class="statistic-info">
+                <h3 class="statistic-count flex-row">0(3)</h3>
+                <span class="statistic-type">오늘</span>
+            </div>
         </div>
+        <div class="statistic-box flex-row align-items-center mr-4">
+            <img class="z-img i-dashboard-weekly" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_weekly.png(theme=${#authentication.details.theme})}">
+            <div class="statistic-info">
+                <h3 class="statistic-count flex-row">4(5)</h3>
+                <span class="statistic-type">이번 주</span>
+            </div>
+        </div>
+        <div class="statistic-box flex-row align-items-center">
+            <img class="z-img i-dashboard-monthly" th:src="@{/assets/theme/{theme}/media/images/dashboard/img_dashboard_monthly.png(theme=${#authentication.details.theme})}">
+            <div class="statistic-info">
+                <h3 class="statistic-count flex-row">11(12)</h3>
+                <span class="statistic-type">이번 달</span>
+            </div>
+        </div>
+    </div>
+    <form id="frmSearch">
+        <input type="hidden" id="searchTokenType" name="searchTokenType" value="token.type.todo" />
+        <input type="hidden" id="searchDocumentId" name="searchDocumentId" value="" />
+        <input type="hidden" id="searchValue" name="searchValue" value="" />
+        <input type="hidden" id="searchFromDt" name="searchFromDt" class="search-date" />
+        <input type="hidden" id="toDt" name="toDt" class="search-date" />
+        <input type="hidden" id="searchToDt" name="searchToDt" class="search-date" />
+        <input type="hidden" id="searchTags" name="searchTags" value="" />
+    </form>
+    <h3 class="sub-title">처리할 문서</h3>
+    <div class="scroll-wrap">
+        <div id="tokenList"></div>
     </div>
 </div>
 <script layout:fragment="pageScript" type="text/javascript">
@@ -109,7 +107,7 @@
                 } else {
                     document.getElementById('tokenList').innerHTML = response.responseText;
                     setDateTimeFormat(document.getElementById('tokenList'));
-                    OverlayScrollbars(document.querySelector('.scroll-wrap'), {
+                    /*OverlayScrollbars(document.querySelector('.scroll-wrap'), {
                         className: 'scrollbar',
                         callbacks: {
                             onScroll: function (e) {
@@ -123,7 +121,7 @@
                                 }
                             }
                         }
-                    });
+                    });*/
                 }
             }
         };
