--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -1,149 +1,141 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-      layout:decorator="layout/defaultLayout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/itsm/pageType/commonEditLayout}">
 <head>
     <title th:text="${faq != null} ? #{faq.label.edit} : #{faq.label.register}"></title>
 </head>
 <body>
-<th:block layout:fragment="head">
-    <div class="z-faq-header">
-        <div class="z-main-header-title flex-row align-items-baseline">
-            <h1 th:text="#{faq.label.faq}"></h1>
-            <h6 class="description ml-2" th:text="#{faq.msg.editDescription}"></h6>
-        </div>
+<div layout:fragment="pageTitle">
+    <h1 th:text="#{faq.label.faq}"></h1>
+    <h6 class="description ml-2" th:text="#{faq.msg.editDescription}"></h6>
+</div>
+<div layout:fragment="pageEdit">
+    <div class="z-edit-form flex-fill">
+        <form id="faqForm" method="post" onsubmit="return false">
+            <input type="hidden" id="faqId" name="faqId" th:value="${faq?.faqId}"/>
+            <div class="flex-column z-edit-row">
+                <label for="faqGroup">
+                    <span th:text="#{faq.label.category}"></span>
+                    <span class="required"></span>
+                </label>
+                <select id="faqGroup" name="faqGroup" required="required">
+                    <option th:each="faqGroup :${faqGroupList}" th:text="#{|common.code.${faqGroup.code}|}"
+                            th:value="${faqGroup.code}" th:selected="${faqGroup.code} == ${faq?.faqGroup}">
+                    </option>
+                </select>
+            </div>
+            <div class="flex-column z-edit-row">
+                <label for="faqTitle">
+                    <span th:text="#{common.label.title}"></span>
+                    <span class="required"></span>
+                </label>
+                <input type="text" class="z-input" id="faqTitle" name="faqTitle" th:value="${faq?.faqTitle}"
+                       maxlength="100" required="required"/>
+            </div>
+            <div class="flex-column z-edit-row">
+                <label for="faqContent">
+                    <span th:text="#{common.label.contents}"></span>
+                    <span class="required"></span>
+                </label>
+                <textarea id="faqContent" name="faqContent" th:text="${faq?.faqContent}"
+                          maxlength="2048" rows="7" class="z-textarea textarea-scroll-wrapper"></textarea>
+            </div>
+            <div class="flex-row justify-content-between z-edit-row">
+                <div class="z-button-list">
+                    <a class="z-button secondary" href="/faqs/search" th:text="#{common.btn.list}"></a>
+                </div>
+                <div class="z-button-list">
+                    <button type="button" class="z-button primary" id="btnRegist"
+                            sec:authorize="hasAuthority('faq.create')"
+                            th:if="!${faq?.faqId}" th:text="#{common.btn.register}"></button>
+                    <button type="button" class="z-button primary" id="btnUpdate"
+                            sec:authorize="hasAuthority('faq.update')"
+                            th:if="${faq?.faqId}" th:text="#{common.btn.modify}"></button>
+                    <button type="button" class="z-button secondary" id="btnDelete"
+                            sec:authorize="hasAuthority('faq.delete')"
+                            th:if="${faq?.faqId}" th:text="#{common.btn.delete}"></button>
+                </div>
+            </div>
+        </form>
     </div>
-</th:block>
-<th:block layout:fragment="content">
-    <div class="flex-column z-edit">
-        <div class="z-faq-content-edit">
-            <form id="faqForm" method="post" onsubmit="return false">
-                <input type="hidden" id="faqId" name="faqId" th:value="${faq?.faqId}"/>
-                <div class="flex-column z-edit-row">
-                    <label for="faqGroup">
-                        <span th:text="#{faq.label.category}"></span>
-                        <span class="required"></span>
-                    </label>
-                    <select id="faqGroup" name="faqGroup" required="required">
-                        <option th:each="faqGroup :${faqGroupList}" th:text="#{|common.code.${faqGroup.code}|}"
-                                th:value="${faqGroup.code}" th:selected="${faqGroup.code} == ${faq?.faqGroup}">
-                        </option>
-                    </select>
-                </div>
-                <div class="flex-column z-edit-row">
-                    <label for="faqTitle">
-                        <span th:text="#{common.label.title}"></span>
-                        <span class="required"></span>
-                    </label>
-                    <input type="text" class="z-input" id="faqTitle" name="faqTitle" th:value="${faq?.faqTitle}"
-                           maxlength="100" required="required"/>
-                </div>
-                <div class="flex-column z-edit-row">
-                    <label for="faqContent">
-                        <span th:text="#{common.label.contents}"></span>
-                        <span class="required"></span>
-                    </label>
-                    <textarea id="faqContent" name="faqContent" th:text="${faq?.faqContent}"
-                              maxlength="2048" rows="7" class="z-textarea textarea-scroll-wrapper"></textarea>
-                </div>
-                <div class="flex-row justify-content-between z-edit-row">
-                    <div class="z-button-list">
-                        <a class="z-button secondary" href="/faqs/search" th:text="#{common.btn.list}"></a>
-                    </div>
-                    <div class="z-button-list">
-                        <button type="button" class="z-button primary" id="btnRegist"
-                                sec:authorize="hasAuthority('faq.create')"
-                                th:if="!${faq?.faqId}" th:text="#{common.btn.register}"></button>
-                        <button type="button" class="z-button primary" id="btnUpdate"
-                                sec:authorize="hasAuthority('faq.update')"
-                                th:if="${faq?.faqId}" th:text="#{common.btn.modify}"></button>
-                        <button type="button" class="z-button secondary" id="btnDelete"
-                                sec:authorize="hasAuthority('faq.delete')"
-                                th:if="${faq?.faqId}" th:text="#{common.btn.delete}"></button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</th:block>
+</div>
 </body>
-<th:block layout:fragment="pageScript">
-    <script type="text/javascript" th:inline="javascript">
-        /*<![CDATA[*/
-        /**
-         * url을 요청한다.
-         */
-        function restSubmit(method, url) {
-            if (!validation()) {
-                return;
-            }
+<script layout:fragment="pageScript" type="text/javascript" th:inline="javascript">
+    /*<![CDATA[*/
+    /**
+     * url을 요청한다.
+     */
+    function restSubmit(method, url) {
+        if (!validation()) {
+            return;
+        }
 
-            let formObj = aliceJs.formDataToObject(document.getElementById('faqForm'))
-            const opt = {
-                method: method,
-                url: url,
-                params: JSON.stringify(formObj),
-                contentType: 'application/json',
-                callbackFunc: function (response) {
-                    let result = response.responseText == "true" ? true : false;
-                    let resultMsg = [[#{faq.msg.duplicateTitleInCategory}]];
-                    if (result) {
-                        resultMsg = [[#{common.msg.save}]];
-                        if (method.toLowerCase() === 'delete') {
-                            resultMsg = [[#{common.msg.delete}]];
-                        }
-                        aliceAlert.alertSuccess(resultMsg, function () {
-                            window.location.href = '/faqs/search';
-                        });
-                    } else {
-                        aliceAlert.alertWarning(resultMsg);
+        let formObj = aliceJs.formDataToObject(document.getElementById('faqForm'))
+        const opt = {
+            method: method,
+            url: url,
+            params: JSON.stringify(formObj),
+            contentType: 'application/json',
+            callbackFunc: function (response) {
+                let result = response.responseText == "true" ? true : false;
+                let resultMsg = [[#{faq.msg.duplicateTitleInCategory}]];
+                if (result) {
+                    resultMsg = [[#{common.msg.save}]];
+                    if (method.toLowerCase() === 'delete') {
+                        resultMsg = [[#{common.msg.delete}]];
                     }
+                    aliceAlert.alertSuccess(resultMsg, function () {
+                        window.location.href = '/faqs/search';
+                    });
+                } else {
+                    aliceAlert.alertWarning(resultMsg);
                 }
-            };
-            aliceJs.sendXhr(opt);
-        }
-
-        /**
-         * 유효성을 검사한다.
-         */
-        function validation() {
-            if (isEmpty('faqTitle', 'common.msg.enterTitle')) {
-                return;
             }
-            if (isEmpty('faqContent', 'common.msg.enterContents')) {
-                return;
-            }
-            return true;
-        }
-
-        window.onload = function () {
-            document.getElementById('faqTitle').focus();
-            if ([[${faq?.faqId}]] === null) {
-                document.getElementById('btnRegist').addEventListener('click', function () {
-                    restSubmit('post', [[@{/rest/faqs}]]);
-                });
-            } else {
-                document.getElementById('btnUpdate').addEventListener('click', function () {
-                    restSubmit('put', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
-                });
-                document.getElementById('btnDelete').addEventListener('click', function () {
-                    aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
-                });
-            }
-            OverlayScrollbars(document.querySelector('.edit'), { className: 'scrollbar' });
-            OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
-                className: 'scrollbar',
-                resize: 'vertical',
-                sizeAutoCapable: true,
-                textarea: {
-                    dynHeight: false,
-                    dynWidth: false,
-                    inheritedAttrs: "class"
-                }
-            });
         };
-        /*]]>*/
-    </script>
-</th:block>
+        aliceJs.sendXhr(opt);
+    }
+
+    /**
+     * 유효성을 검사한다.
+     */
+    function validation() {
+        if (isEmpty('faqTitle', 'common.msg.enterTitle')) {
+            return;
+        }
+        if (isEmpty('faqContent', 'common.msg.enterContents')) {
+            return;
+        }
+        return true;
+    }
+
+    window.onload = function () {
+        document.getElementById('faqTitle').focus();
+        if ([[${faq?.faqId}]] === null) {
+            document.getElementById('btnRegist').addEventListener('click', function () {
+                restSubmit('post', [[@{/rest/faqs}]]);
+            });
+        } else {
+            document.getElementById('btnUpdate').addEventListener('click', function () {
+                restSubmit('put', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
+            });
+            document.getElementById('btnDelete').addEventListener('click', function () {
+                aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
+            });
+        }
+        OverlayScrollbars(document.querySelector('.z-page-content'), { className: 'scrollbar' });
+        OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
+            className: 'scrollbar',
+            resize: 'vertical',
+            sizeAutoCapable: true,
+            textarea: {
+                dynHeight: false,
+                dynWidth: false,
+                inheritedAttrs: "class"
+            }
+        });
+    };
+    /*]]>*/
+</script>
 </html>
