--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/itsm/pageType/searchCommonLayout">
+      layout:decorate="~{layout/itsm/pageType/commonSearchLayout}">
 <head>
     <title th:text="#{image.label.list}"></title>
 </head>
@@ -10,15 +10,15 @@
     <h1 th:text="#{image.label.list}"></h1>
     <h6 class="description ml-2" th:text="#{image.msg.searchDescription}"></h6>
 </div>
-<div layout:fragment="pageSearching" class="z-main-header-search flex-row">
+<div layout:fragment="pageSearching">
     <input type="text" class="z-input i-search col-5 mr-2" id="searchValue" name="searchValue" maxlength="100" th:placeholder="#{image.label.name}"/>
     <span id="totalCount" class="search-count"></span>
 </div>
-<th:block layout:fragment="pageSearchResult">
+<div layout:fragment="pageSearchResult">
     <div class="z-image-content-edit flex-fill">
         <div class="z-thumbnail-main flex-row flex-wrap" id="thumbnailMain"></div>
     </div>
-</th:block>
+</div>
 <script layout:fragment="pageScript" type="text/javascript" th:inline="javascript">
     let previewModal;
     let offsetCount = 0;
