--- a/src/main/resources/public/assets/css/report.css
+++ b/src/main/resources/public/assets/css/report.css
@@ -897,13 +897,13 @@ input, button, select, optgroup, textarea {
   font-weight: bold;
 }
 .z-report .z-report-main .z-report-area .z-drawing-board {
-  width: 1000px;
+  width: 62.5rem;
 }
 .z-report .z-report-main .z-report-area .z-drawing-board .z-chart-content {
-  margin: 0 0 20px 0;
+  margin: 0 0 1.25rem 0;
 }
 .z-report .z-report-main .z-report-area .z-drawing-board .z-chart-content .z-chart {
-  padding: 12px 0 0 0;
+  padding: 0.75rem 0 0 0;
 }
 .z-report .z-report-main .z-report-area .z-form {
   box-shadow: none;
@@ -921,8 +921,8 @@ input, button, select, optgroup, textarea {
 .z-report .z-report-main .z-report-main-footer .z-logo {
   display: inline-block;
   background-color: #000000;
-  width: 152px;
-  height: 26px;
+  width: 9.5rem;
+  height: 1.625rem;
   -webkit-mask-image: url("../media/icons/logo/icon_logo.svg");
   mask-image: url("../media/icons/logo/icon_logo.svg");
   -webkit-mask-repeat: no-repeat;
