--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2954,7 +2954,7 @@ table[id=documentDisplay] td {
 .z-itsm-container .z-main-content .z-page-edit .z-edit-form .z-edit-row {
   margin-top: 0.625rem;
 }
-.z-itsm-container .z-main-content .z-page-edit .z-edit-form .z-button-list {
+.z-itsm-container .z-main-content .z-page-edit .z-button-list {
   margin: 1.875rem 0;
 }
 .z-itsm-container .z-main-content .z-page-list {
