--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -66,11 +66,11 @@
 // itsm 디자인
 @mixin defaultMainHeader {
   // 제목
-  .#{$common-prefix}main-header-title {
+  .z-main-header-title {
     padding: 0 0 1.563rem 0; // 0 0px 25px 0px
   }
   // 검색 영역
-  .#{$common-prefix}main-header-search {
+  .z-main-header-search {
     font-family: $layout-header-search-font-family;
     font-size: $layout-header-search-font-size;
     padding: 0.3125rem 0px 1.25rem 0px; // 5px 0px 20px 0px
@@ -332,12 +332,13 @@
     .z-edit-form {
       display: flex;
       flex-direction: column;
+
       .z-edit-row {
         margin-top: 0.625rem; // 10px
       }
-      .z-button-list {
-        margin: 1.875rem 0;
-      } // 30px
+    }
+    .z-button-list {
+      margin: 1.875rem 0; // 30px
     }
   }
 }
@@ -453,17 +454,17 @@
 }
 // register, edit
 @mixin defaultEditTemplate() {
-  .#{$common-prefix}edit {
+  .z-edit {
     height: 100vh; // edit 화면에서 스크롤이 생기는 영역
-    .#{$common-prefix}edit-row {
+    .z-edit-row {
       margin: 0.625rem 0 0; // 10px 0 0 0
 
       // 버튼 목록
-      .#{$common-prefix}button-list { margin-top: 1.875rem; } // 30px
+      .z-button-list { margin-top: 1.875rem; } // 30px
     }
 
-    .#{$common-prefix}edit-column {
-      .#{$common-prefix}edit-row { margin: 0.625rem 0 0 0; } // 10px 0 0 0
+    .z-edit-column {
+      .z-edit-row { margin: 0.625rem 0 0 0; } // 10px 0 0 0
     }
   }
 }
