#10876 편집화면 구현 - 나머지 화면들 정리 (문서번호쪽에 이슈가 남음)

--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -1,86 +1,80 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      layout:decorator="layout/defaultLayout">
+      layout:decorate="~{layout/itsm/pageType/commonEditLayout}">
 <head>
     <title th:text="#{cmdb.attribute.label.view}"></title>
 </head>
 <body>
-<th:block layout:fragment="head">
-    <div class="z-cmdb-attribute-header">
-        <div class="z-main-header-title flex-row align-items-baseline">
-            <h1 th:text="#{cmdb.attribute.label.view}"></h1>
-            <h6 class="description ml-2" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
+<div layout:fragment="pageTitle">
+    <h1 th:text="#{cmdb.attribute.label.view}"></h1>
+    <h6 class="description ml-2" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
+</div>
+<div layout:fragment="pageEdit">
+    <div class="z-edit-form flex-fill">
+        <div class="flex-column z-edit-row">
+            <label for="attributeName">
+                <span th:text="#{cmdb.attribute.label.name}"></span>
+                <span class="required"></span>
+            </label>
+            <input type="text" id="attributeName" class="z-input" required="true" maxlength="100"
+                   th:attr="data-validation-required-name=#{cmdb.attribute.label.name}"
+                   th:value="${attribute?.attributeName}"/>
         </div>
-    </div>
-</th:block>
-<th:block layout:fragment="content">
-    <div class="flex-column z-edit">
-        <div class="z-cmdb-attribute-content-edit">
-            <div class="flex-column z-edit-row">
-                <label for="attributeName">
-                    <span th:text="#{cmdb.attribute.label.name}"></span>
+        <div class="flex-column z-edit-row">
+            <label for="attributeDesc">
+                <span th:text="#{cmdb.attribute.label.description}"></span>
+            </label>
+            <textarea id="attributeDesc" name="attributeDesc" class="z-textarea textarea-scroll-wrapper"
+                      maxlength="250" rows="5" th:text="${attribute?.attributeDesc}"></textarea>
+        </div>
+        <div class="flex-column z-edit-row">
+            <label for="attributeText">
+                <span th:text="#{cmdb.attribute.label.label}"></span>
+            </label>
+            <input type="text" id="attributeText" class="z-input" maxlength="100"
+                   th:value="${attribute?.attributeText}"/>
+        </div>
+        <div class="flex-column z-edit-row">
+            <label for="mappingId">
+                <span th:text="#{cmdb.attribute.label.mappingId}"></span>
+            </label>
+            <input type="text" id="mappingId" class="z-input" maxlength="100"
+                   th:value="${attribute?.mappingId}"/>
+        </div>
+        <div class="flex-column z-edit-row">
+            <label for="attributeType">
+                <span th:text="#{cmdb.attribute.label.type}"></span>
+                <span class="required"></span>
+            </label>
+            <select id="attributeType" onchange="changeType(this)">
+            </select>
+        </div>
+        <div class="flex-column z-edit-row">
+            <div class="under-bar">
+                <label>
+                    <span th:text="#{cmdb.attribute.label.details}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="attributeName" class="z-input" required="true" maxlength="100"
-                       th:attr="data-validation-required-name=#{cmdb.attribute.label.name}"
-                       th:value="${attribute?.attributeName}"/>
             </div>
-            <div class="flex-column z-edit-row">
-                <label for="attributeDesc">
-                    <span th:text="#{cmdb.attribute.label.description}"></span>
-                </label>
-                <textarea id="attributeDesc" name="attributeDesc" class="z-textarea textarea-scroll-wrapper"
-                          maxlength="250" rows="5" th:text="${attribute?.attributeDesc}"></textarea>
+            <div id="details" class="attribute"></div>
+        </div>
+        <div class="flex-row justify-content-between z-edit-row">
+            <div class="z-button-list">
+                <a class="z-button secondary" href="/cmdb/attributes/search" th:text="#{common.btn.list}"></a>
             </div>
-            <div class="flex-column z-edit-row">
-                <label for="attributeText">
-                    <span th:text="#{cmdb.attribute.label.label}"></span>
-                </label>
-                <input type="text" id="attributeText" class="z-input" maxlength="100"
-                       th:value="${attribute?.attributeText}"/>
-            </div>
-            <div class="flex-column z-edit-row">
-                <label for="mappingId">
-                    <span th:text="#{cmdb.attribute.label.mappingId}"></span>
-                </label>
-                <input type="text" id="mappingId" class="z-input" maxlength="100"
-                       th:value="${attribute?.mappingId}"/>
-            </div>
-            <div class="flex-column z-edit-row">
-                <label for="attributeType">
-                    <span th:text="#{cmdb.attribute.label.type}"></span>
-                    <span class="required"></span>
-                </label>
-                <select id="attributeType" onchange="changeType(this)">
-                </select>
-            </div>
-            <div class="flex-column z-edit-row">
-                <div class="under-bar">
-                    <label>
-                        <span th:text="#{cmdb.attribute.label.details}"></span>
-                        <span class="required"></span>
-                    </label>
-                </div>
-                <div id="details" class="attribute"></div>
-            </div>
-            <div class="flex-row justify-content-between z-edit-row">
-                <div class="z-button-list">
-                    <a class="z-button secondary" href="/cmdb/attributes/search" th:text="#{common.btn.list}"></a>
-                </div>
-                <div class="z-button-list">
-                    <button class="z-button primary" th:if="${attribute == null}" sec:authorize="hasAuthority('cmdb.attribute.create')"
-                            onclick="actionAttribute('post')" th:text="#{common.btn.register}"></button>
-                    <button class="z-button primary" th:if="${attribute?.attributeId}" sec:authorize="hasAuthority('cmdb.attribute.update')"
-                            onclick="actionAttribute('put')" th:text="#{common.btn.modify}"></button>
-                    <button class="z-button secondary" th:if="${attribute?.attributeId}" sec:authorize="hasAuthority('cmdb.attribute.delete')"
-                            th:disabled="${!attribute.enabled}" onclick="actionAttribute('delete')" th:text="#{common.btn.delete}"></button>
-                </div>
+            <div class="z-button-list">
+                <button class="z-button primary" th:if="${attribute == null}" sec:authorize="hasAuthority('cmdb.attribute.create')"
+                        onclick="actionAttribute('post')" th:text="#{common.btn.register}"></button>
+                <button class="z-button primary" th:if="${attribute?.attributeId}" sec:authorize="hasAuthority('cmdb.attribute.update')"
+                        onclick="actionAttribute('put')" th:text="#{common.btn.modify}"></button>
+                <button class="z-button secondary" th:if="${attribute?.attributeId}" sec:authorize="hasAuthority('cmdb.attribute.delete')"
+                        th:disabled="${!attribute.enabled}" onclick="actionAttribute('delete')" th:text="#{common.btn.delete}"></button>
             </div>
         </div>
     </div>
-</th:block>
+</div>
 </body>
 <th:block layout:fragment="pageScript">
     <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
@@ -125,7 +119,7 @@
 
             aliceJs.initDesignedSelectTag();
 
-            OverlayScrollbars(document.querySelectorAll('.edit'), { className: 'scrollbar' });
+            OverlayScrollbars(document.querySelectorAll('.z-page-content'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
                 className: 'scrollbar',
                 resize: 'vertical',
