--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -64,13 +64,16 @@
                    th:value="${auth?.roleAuthMapCount}" disabled>
         </div>
     </div>
-    <div class="flex-row justify-content-end">
+    <div class="flex-row justify-content-between z-edit-row">
+        <div class="z-button-list">
+            <a class="z-button secondary" href="/auths/search" th:text="#{common.btn.list}"></a>
+        </div>
         <div class="z-button-list">
             <button sec:authorize="hasAuthority('auth.create')"
-                    class="z-button primary" type="button" id="btnRegist" name="btnRegist"
+                    class="z-button primary" th:if="!${auth?.authId}" type="button" id="btnRegist" name="btnRegist"
                     th:onclick="|javascript:onSave('post')|" th:text="#{common.btn.register}"></button>
             <button sec:authorize="hasAuthority('auth.update')"
-                    class="z-button primary" type="button" id="btnUpdate" name="btnUpdate"
+                    class="z-button primary" th:if="${auth?.authId}" type="button" id="btnUpdate" name="btnUpdate"
                     th:onclick="|javascript:onSave('put')|" th:text="#{common.btn.modify}"></button>
             <button sec:authorize="hasAuthority('auth.delete')"
                     class="z-button secondary" type="button" id="btnDelete" name="btnDelete"
@@ -82,15 +85,8 @@
 </body>
 <script layout:fragment="pageScript" type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
-    let AUTH_DELETE = false;
-    let AUTH_CREATE = false;
-    let AUTH_UPDATE = false;
     let defaultMenuList = [];
     let defaultUrlList = [];
-
-    window.onload = function() {
-
-    }
 
     /*[# th:each="defaultUserMenu : ${defaultUserMenuList}"]*/
     defaultMenuList.push(/*[[${defaultUserMenu.codeValue}]]*/);
@@ -99,6 +95,85 @@
     /*[# th:each="defaultUserUrl : ${defaultUserUrlList}"]*/
     defaultUrlList.push(/*[[${defaultUserUrl.codeValue}]]*/);
     /*[/]*/
+
+    window.onload = function() {
+        OverlayScrollbars(document.querySelector('.z-page-content'), {className: 'scrollbar'});
+        OverlayScrollbars(document.querySelectorAll('.z-checkbox-list'), {
+            className: 'inner-scrollbar',
+            callbacks: {
+                onInitialized: function () {
+                    const verticalScrollTrack = document.querySelectorAll('.z-checkbox-list> .os-scrollbar-vertical');
+                    for (let i = 0; i < verticalScrollTrack.length; i++) {
+                        verticalScrollTrack.item(i).classList.add('right', 'padding');
+                    }
+                }
+            }
+        });
+
+        if (document.getElementById('txtAuthId').value) {
+            document.getElementById('txtAuthId').setAttribute('disabled','');
+            const opt = {
+                method: 'get',
+                async: false,
+                url: '/rest/auths/' + document.getElementById('txtAuthId').value,
+                callbackFunc: function (response) {
+                    let responseJson = JSON.parse(response.responseText);
+
+                    let arrMenuList = responseJson.arrMenuList;
+                    Array.prototype.forEach.call(document.querySelectorAll('input[name=authMenu]'), function (authMenu) {
+                        authMenu.checked = false;
+                        authMenu.disabled = false;
+                        for (let i = 0; i < arrMenuList.length; i++) {
+                            if (authMenu.id === arrMenuList[i].menuId) {
+                                authMenu.checked = true;
+                            }
+                            for (let k = 0; k < defaultMenuList.length; k++) {
+                                if (authMenu.id === defaultMenuList[k]) {
+                                    authMenu.checked = true;
+                                    authMenu.disabled = true;
+                                }
+                            }
+                        }
+                    });
+
+                    let arrUrlList = responseJson.arrUrlList;
+                    Array.prototype.forEach.call(document.querySelectorAll('input[name=authUrl]'), function (authUrl) {
+                        authUrl.checked = false;
+                        authUrl.disabled = false;
+                        for (let i = 0; i < arrUrlList.length; i++) {
+                            if (authUrl.id === arrUrlList[i].url) {
+                                authUrl.checked = true;
+                            }
+                            for (let k = 0; k < defaultUrlList.length; k++) {
+                                if (authUrl.id === defaultUrlList[k]) {
+                                    authUrl.checked = true;
+                                    authUrl.disabled = true;
+                                }
+                            }
+                        }
+                    });
+
+                    if (document.getElementById('roleAuthMapCount').value) {
+                        document.getElementById('roleAuthMapCount').value = i18n.msg('auth.label.count', responseJson.roleAuthMapCount);
+                    }
+                    disabledButton(responseJson.roleAuthMapCount);
+                    OverlayScrollbars(document.querySelector('.z-auth-content-edit'), {className: 'scrollbar'});
+                    OverlayScrollbars(document.querySelectorAll('.z-checkbox-list'), {
+                        className: 'inner-scrollbar',
+                        callbacks: {
+                            onInitialized: function () {
+                                const verticalScrollTrack = document.querySelectorAll('.z-checkbox-list> .os-scrollbar-vertical');
+                                for (let i = 0; i < verticalScrollTrack.length; i++) {
+                                    verticalScrollTrack.item(i).classList.add('right', 'padding');
+                                }
+                            }
+                        }
+                    });
+                },
+            };
+            aliceJs.sendXhr(opt);
+        }
+    }
 
     OverlayScrollbars(document.querySelector('#txtAuthDesc'), {
         className: 'inner-scrollbar',
@@ -171,7 +246,7 @@
             contentType: 'application/json',
             callbackFunc: function () {
                 aliceAlert.alertSuccess([[#{common.msg.save}]], function () {
-                    window.location.href = '/auths/edit';
+                    window.location.href = '/auths/search';
                 });
             }
         };
@@ -186,7 +261,7 @@
             url: '/rest/auths/' + document.getElementById('txtAuthId').value,
             callbackFunc: function () {
                 aliceAlert.alertSuccess([[#{common.msg.delete}]], function () {
-                    window.location.href = '/auths/edit';
+                    window.location.href = '/auths/search';
                 });
             }
         };
@@ -202,93 +277,6 @@
             btn.disabled = false;
         }
     }
-
-    function onGetDetail(authId) {
-        const opt = {
-            method: 'get',
-            async: false,
-            url: '/rest/auths/' + authId,
-            callbackFunc: function (response) {
-
-                let arrMenuList = responseJson.arrMenuList;
-                Array.prototype.forEach.call(document.querySelectorAll('input[name=authMenu]'), function (authMenu) {
-                    authMenu.checked = false;
-                    authMenu.disabled = false;
-                    for (let i = 0; i < arrMenuList.length; i++) {
-                        if (authMenu.id == arrMenuList[i].menuId) {
-                            authMenu.checked = true;
-                        }
-                        for (let k = 0; k < defaultMenuList.length; k++) {
-                            if (authMenu.id == defaultMenuList[k]) {
-                                authMenu.checked = true;
-                                authMenu.disabled = true;
-                            }
-                        }
-                    }
-                });
-
-                let arrUrlList = responseJson.arrUrlList;
-                Array.prototype.forEach.call(document.querySelectorAll('input[name=authUrl]'), function (authUrl) {
-                    authUrl.checked = false;
-                    authUrl.disabled = false;
-                    for (let i = 0; i < arrUrlList.length; i++) {
-                        if (authUrl.id == arrUrlList[i].url) {
-                            authUrl.checked = true;
-                        }
-                        for (let k = 0; k < defaultUrlList.length; k++) {
-                            if (authUrl.id == defaultUrlList[k]) {
-                                authUrl.checked = true;
-                                authUrl.disabled = true;
-                            }
-                        }
-                    }
-                });
-
-                document.getElementById('txtAuthId').setAttribute('disabled', '');
-                document.getElementById('roleAuthMapCount').value = i18n.msg('auth.label.count', responseJson.roleAuthMapCount);
-                if (AUTH_DELETE) {
-                    disabledButton(responseJson.roleAuthMapCount);
-                }
-                OverlayScrollbars(document.querySelector('.z-auth-content-edit'), {className: 'scrollbar'});
-                OverlayScrollbars(document.querySelectorAll('.z-checkbox-list'), {
-                    className: 'inner-scrollbar',
-                    callbacks: {
-                        onInitialized: function () {
-                            const verticalScrollTrack = document.querySelectorAll('.z-checkbox-list> .os-scrollbar-vertical');
-                            for (let i = 0; i < verticalScrollTrack.length; i++) {
-                                verticalScrollTrack.item(i).classList.add('right', 'padding');
-                            }
-                        }
-                    }
-                });
-            },
-        };
-        aliceJs.sendXhr(opt);
-    }
-
-    function sortMenuList() {
-        let menuList = document.getElementById("menuList");
-        let switching = true;
-        let liTag, switchLiTag;
-
-        while (switching) {
-            switching = false;
-            liTag = menuList.getElementsByTagName("LI");
-
-            for (var i = 0; i < (liTag.length - 1); i++) {
-                switchLiTag = false;
-                if (liTag[i].textContent > liTag[i + 1].textContent) {
-                    switchLiTag = true;
-                    break;
-                }
-            }
-            if (switchLiTag) {
-                liTag[i].parentNode.insertBefore(liTag[i + 1], liTag[i]);
-                switching = true;
-            }
-        }
-    }
-
     /*]]>*/
 </script>
 </html>
