--- a/src/main/resources/public/template/layout/itsm/pageType/commonEditLayout.html
+++ b/src/main/resources/public/template/layout/itsm/pageType/commonEditLayout.html
@@ -4,12 +4,12 @@
       layout:decorate="~{layout/itsm/itsmLayout}">
 <!--/* 세부 항목 편집 화면 레이아웃 */-->
 <body>
-<div layout:fragment="pageContent" class="z-main-content flex-column">
+<th:block layout:fragment="pageContent">
     <div class="z-page-content">
         <!--/* 편집 영역 */-->
         <div layout:fragment="pageEdit" class="z-page-edit"></div>
 
     </div>
-</div>
+</th:block>
 </body>
 </html>
