#10990 CI 연관 관계 등록 기능 -> css,scss,yml 파일 수정

--- a/src/main/resources/public/scss/document/_modal.scss
+++ b/src/main/resources/public/scss/document/_modal.scss
@@ -35,6 +35,28 @@
             border-radius:  0.0625rem; // 1px
             margin-bottom: 0.625rem; // 10px
           }
+          // 연관 관계
+          .relation-group {
+            .relation-title-group {
+              height: $cmdb-ci-relation-height;
+              .sub-title {
+                font-size: $cmdb_ci-relation-font-size;
+              }
+            }
+            .relation-select-box-group {
+              width: $cmdb-ci-relation-select-group-width;
+              font-size: $cmdb-ci-relation-select-group-font-size;
+              font-weight: $cmdb-ci-relation-select-group-font-weight;
+              font-family: $cmdb-ci-relation-select-group-font-family;
+              padding: $cmdb-ci-relation-select-group-padding;
+            }
+            .ci-select-box {
+              width: $cmdb-ci-ci-select-box-width;
+            }
+            .relation-type-select-box {
+              width: $cmdb-ci-relation-select-box-width;
+            }
+          }
         }
         // TODO: UX팀 디자인 작업 후 변경 예정
         .cmdb-ci-content-view {
