--- a/src/main/resources/public/scss/document/_variables.scss
+++ b/src/main/resources/public/scss/document/_variables.scss
@@ -65,6 +65,17 @@ $cmdb-ci-modal-height:                       53.0625rem; // 849px
 $cmdb-ci-attribute-border:                   0.0625rem solid map-get($grays, 'line'); // 1px
 $cmdb-ci-attribute-bg-color:                 map-get($grays, 'light');
 
+$cmdb-ci-relation-height:                    2.4375rem; // 39px
+$cmdb_ci-relation-font-size:                 $font-size-l; // 24px
+$cmdb-ci-relation-select-group-width:        54.75rem; // 876px
+$cmdb-ci-relation-select-group-font-size:    $font-size-m;
+$cmdb-ci-relation-select-group-font-weight:  $font-weight-medium;
+$cmdb-ci-relation-select-group-font-family:  $font-family-m;
+$cmdb-ci-relation-select-group-padding:      0.6875rem 0 0.6875rem 0; // 11px 0 11px 0
+
+$cmdb-ci-ci-select-box-width:                20.3rem; // 324.8px;
+$cmdb-ci-relation-select-box-width:          10.9rem; // 174.4px;
+
 ///////////////////////////// Tree ////////////////////////////////
 $tree-modal-width:                           40rem; // 640px
 $tree-modal-height:                          44.19rem; // 707px
