--- a/src/main/resources/public/scss/formDesigner/_properties.scss
+++ b/src/main/resources/public/scss/formDesigner/_properties.scss
@@ -226,4 +226,39 @@
       }
     }
   }
+  .z-option-table {
+    width: 100%;
+    border: none;
+    border-collapse: collapse;
+    color: $property-option-tb-color;
+    font-size: $element-font-size;
+    font-weight: $property-option-tb-font-weight;
+
+    .z-option-table-header {
+      height: 2rem;
+      @include border(0.125rem, solid, $property-option-tb-header-color, bottom);
+      background-color: $property-option-tb-header-bg-color;
+      text-indent: $element-indent;
+      font-weight: $property-option-tb-header-font-weight;
+    }
+    tr td {
+      @include border(0.0625rem, solid, $property-option-tb-header-color, all);
+      border-left: none;
+      border-right: none;
+      vertical-align: middle;
+      .z-input {
+        width: 85%;
+        padding: 0.75rem;
+        margin: 0 0.25rem;
+      }
+      .z-icon {
+        display: block;
+        margin: 0 auto;
+        background: $property-option-tb-content-btn-color;
+        &:hover {
+          background: $property-option-tb-content-btn-hv-color;
+        }
+      }
+    }
+  }
 }
